@@ -15,62 +15,58 @@
 import bpy
 from bpy.types import Operator
 
-from bpy.props import BoolProperty
-
 class Anim_TO_Driver_Fixer(Operator):
 	""" Solve overide library issue with drivers """
 	bl_idname = "anim.driver_fixer"
 	bl_label = "Driver Fixer"
 
-	shapekey: BoolProperty(name='Shapekey', default=True)
-
 	@classmethod
 	def poll(self, ctx):
-		if ctx.area.type == 'VIEW_3D':
-			return len(ctx.selected_objects) > 0
-		return False
+		return ctx.area.type == 'VIEW_3D'
 
-	def draw(self, ctx):
-		layout = self.layout
-		layout.prop(self, 'shapekey')
-	
-	def get_driver(self, obj, name):
-		for driver in obj.data.shape_keys.animation_data.drivers:
-			if driver.data_path[12: -8] == name:
-				return driver.driver
+	def get_shapekey_driver(self, obj, name):
+		if hasattr(obj.data.shape_keys.animation_data, 'drivers'):
+			for driver in obj.data.shape_keys.animation_data.drivers:
+				if driver.data_path[12: -8] == name:
+					return driver.driver
 		return None
+	
+	def fix_driver(self, driver):
+		if driver:
+			for var in driver.variables:
+				for target in var.targets:
+					if target.id:
+						name = target.id.name
+						if name in bpy.data.objects:
+							target.id = bpy.data.objects[name]
+				var.targets.update()
 
-	def fix_shapekey_drivers(self, obj):
-		if obj.data.shape_keys:
+	def fix_shapekey(self, obj):
+		if hasattr(obj.data.shape_keys, 'key_blocks'):
 			names = [n.name for n in obj.data.shape_keys.key_blocks if n.name != 'Basis']
 			for name in names:
-				# shapekey = obj.data.shape_keys.key_blocks[name]
-				driver = self.get_driver(obj, name)
-				if driver:
-					for var in driver.variables:
-						for target in var.targets:
-							name = target.id.name
-							target.id = bpy.data.objects[name]
-						var.targets.update()
+				driver = self.get_shapekey_driver(obj, name)
+				try:
+					self.fix_driver(driver)
+				except:
+					pass
 
 	def execute(self, ctx):
-		for obj in ctx.selected_objects:
+		for obj in bpy.data.objects:
+			if obj.animation_data:
+				for driver in obj.animation_data.drivers:
+					self.fix_driver(driver.driver)
+		for obj in bpy.data.objects:
 			if obj.type in {'MESH','CURVE'}:
-				if self.shapekey:
-					self.fix_shapekey_drivers(obj)
+				self.fix_shapekey(obj)
 			
 		return{"FINISHED"}
 
-	def invoke(self, ctx, event):
-		return ctx.window_manager.invoke_props_dialog(self, width=200)
-
-classes = [Anim_TO_Driver_Fixer]
-
 def register_driver_fixer():
-	[bpy.utils.register_class(c) for c in classes]
+	bpy.utils.register_class(Anim_TO_Driver_Fixer)
 
 def unregister_driver_fixer():
-	[bpy.utils.unregister_class(c) for c in classes]
+	bpy.utils.unregister_class(Anim_TO_Driver_Fixer)
 
 if __name__ == "__main__":
 	register_driver_fixer()
